# inn-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: api.py  main.py  people.py  person.py  static.py  tasks.py  tokens.py
app/core/: config.py
app/db/: events.py
app/db/migrations/: env.py
app/db/migrations/versions/: 3b125a39fd38_create_tables.py
app/db/queries/: queries.pyi  tables.py
app/db/queries/sql/: people.sql  tasks.sql  totals.sql
app/db/repositories/: people.py  tasks.py  totals.py
app/models/: people_csv.py  renderers.py
app/models/domain/: people.py  rwmodel.py  tasks.py
app/models/schemas/: people.py  status.py  tasks.py
app/resources/: strings.py
app/services/: taxru.py  utils.py
app/static/css/: main.css
app/static/js/: scripts.js
app/static/templates/: footer.html  index.html  layout.html  load.html  menu.html  tasks.html
tests/: test_app.py
