[tool.poetry]
name = "honor"
version = "0.1.0"
description = ""
authors = ["drJabber@gmail.com <dJabber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
alembic = "^1.5.2"
uvicorn = "^0.13.3"
pydantic = "^1.7.3"
loguru = "^0.5.3"
aiosql = "^3.2.0"
cryptography = "^3.3.1"
PyPika = "^0.47.4"
aiofiles = "^0.6.0"
asyncpg = "^0.21.0"
databases = {extras = ["postgresql"], version = "^0.4.1"}
psycopg2-binary = "^2.8.6"
python-multipart = "^0.0.5"
aiocsv = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
